fix: Add GIDClientID and GIDServerClientID to Info.plist for GoogleSignIn 7.0
- Add GIDClientID (iOS client ID) required by GoogleSignIn 7.0 SDK
- Add GIDServerClientID (Web client ID) for server-side token exchange
- Fixes 'No active configuration. Make sure GIDClientID is set in Info.plist' crash

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -84,5 +84,9 @@
 	<false/>
 	<key>UIUserInterfaceStyle</key>
 	<string>Dark</string>
+	<key>GIDClientID</key>
+	<string>776781271347-2pice7mn84v1mo1gaccghc6oh5k6do6i.apps.googleusercontent.com</string>
+	<key>GIDServerClientID</key>
+	<string>776781271347-ergb3kc3djjen47loq61icptau51rk4m.apps.googleusercontent.com</string>
 </dict>
 </plist>
