feat: upgrade Google Play Billing Library to 7.1.1
- Update billing library from 6.1.0 to 7.1.1 (Play Console requirement)
- Migrate deprecated APIs to 7.x (SkuDetails → ProductDetails)
- Update InAppPurchasePlugin.java for compatibility
- This is required for Play Console submissions after Aug 31, 2025

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,9 +72,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.7.0')
     implementation 'com.google.firebase:firebase-messaging'
     
-    // Google Play Billing
-    implementation 'com.android.billingclient:billing:6.1.0'
-    implementation 'com.android.billingclient:billing-ktx:6.1.0'
+    // Google Play Billing (Updated to 7.0.0+ for Play Console compliance)
+    implementation 'com.android.billingclient:billing:7.1.1'
+    implementation 'com.android.billingclient:billing-ktx:7.1.1'
 }
 
 apply from: 'capacitor.build.gradle'
