--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/push-notifications": "^7.0.3",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@neondatabase/serverless": "^0.9.0",
+    "@vercel/blob": "^2.0.0",
     "eventemitter3": "^5.0.1",
     "expo-server-sdk": "^3.10.0",
     "framer-motion": "^12.23.24",
