--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.553.0",
     "next": "^15.0.0",
     "next-auth": "^4.24.5",
+    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-quill": "^2.0.0",
