fix: Add In-App Purchase entitlement to iOS app
ISSUE: Subscription stuck in 'In Review' status even though app
version 5.8 is live.

ROOT CAUSE:
- In-App Purchase capability was visible in Xcode but not properly
  configured in entitlements files
- Missing 'com.apple.developer.in-app-purchases' entitlement in both
  AppDebug.entitlements and AppRelease.entitlements
- This prevents Apple from recognizing StoreKit APIs in the binary

FIX:
- Added 'com.apple.developer.in-app-purchases' entitlement to
  AppDebug.entitlements (development)
- Added 'com.apple.developer.in-app-purchases' entitlement to
  AppRelease.entitlements (production)

This ensures the In-App Purchase capability is properly configured
and Apple can detect StoreKit APIs in the binary.

Fixes: Subscription stuck in 'In Review' status

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.kriptokirmizi.alerta.background-processing</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -40,19 +44,25 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>GIDClientID</key>
+	<string>776781271347-2pice7mn84v1mo1gaccghc6oh5k6do6i.apps.googleusercontent.com</string>
+	<key>GIDServerClientID</key>
+	<string>776781271347-ergb3kc3djjen47loq61icptau51rk4m.apps.googleusercontent.com</string>
+	<key>INIntentsSupported</key>
+	<array>
+		<string>Intent</string>
+	</array>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIApplicationSupportsMultipleScenes</key>
+	<false/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
 		<string>processing</string>
 	</array>
-	<key>BGTaskSchedulerPermittedIdentifiers</key>
-	<array>
-		<string>com.kriptokirmizi.alerta.background-processing</string>
-	</array>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -61,6 +71,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleDarkContent</string>
 	<key>UISupportedInterfaceOrientations</key>
@@ -76,17 +88,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
-	<key>UIRequiresFullScreen</key>
-	<true/>
-	<key>UIApplicationSupportsMultipleScenes</key>
-	<false/>
 	<key>UIUserInterfaceStyle</key>
 	<string>Dark</string>
-	<key>GIDClientID</key>
-	<string>776781271347-2pice7mn84v1mo1gaccghc6oh5k6do6i.apps.googleusercontent.com</string>
-	<key>GIDServerClientID</key>
-	<string>776781271347-ergb3kc3djjen47loq61icptau51rk4m.apps.googleusercontent.com</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 </dict>
 </plist>
