--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Real-time cryptocurrency charting platform - aggr.trade clone",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint",
     "worker:build": "tsc workers/aggregator.ts --outDir public/workers --lib es2020,webworker --target es2020",
