--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@neondatabase/serverless": "^0.9.0",
     "@vercel/blob": "^2.0.0",
+    "clsx": "^2.1.1",
     "eventemitter3": "^5.0.1",
     "expo-server-sdk": "^3.10.0",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.25",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "lightweight-charts": "^4.2.0",
@@ -45,6 +46,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-quill": "^2.0.0",
+    "tailwind-merge": "^3.4.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
