security: Add webhook signature verification and extend rate limiting
- Apple App Store Server Notifications V2 JWS signature verification
- Google Play RTDN notification parsing
- Legacy webhook format now requires secret header in production
- Rate limiting added to guest-login endpoint
- Rate limiting added to webhook endpoint (100 req/min)
- Installed @apple/app-store-server-library for Apple verification

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:premium": "echo 'Premium utility tests - Run manually with test framework'"
   },
   "dependencies": {
+    "@apple/app-store-server-library": "^2.0.0",
     "@capacitor-community/apple-sign-in": "^7.1.0",
     "@capacitor/android": "^7.4.4",
     "@capacitor/app": "^7.1.0",
