--- a/vercel.json
+++ b/vercel.json
@@ -4,19 +4,6 @@
       "maxDuration": 60
     }
   },
-  "redirects": [
-    {
-      "source": "/:path*",
-      "has": [
-        {
-          "type": "host",
-          "value": "www.alertachart.com"
-        }
-      ],
-      "destination": "https://alertachart.com/:path*",
-      "permanent": true
-    }
-  ],
   "headers": [
     {
       "source": "/favicon.ico",
@@ -24,10 +11,6 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
-        },
-        {
-          "key": "Content-Type",
-          "value": "image/x-icon"
         }
       ]
     },
@@ -37,10 +20,6 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
-        },
-        {
-          "key": "Content-Type",
-          "value": "image/png"
         }
       ]
     },
@@ -52,8 +31,8 @@
           "value": "public, max-age=86400"
         },
         {
-          "key": "Content-Type",
-          "value": "application/manifest+json"
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
         }
       ]
     }
