--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eventemitter3": "^5.0.1",
     "expo-server-sdk": "^3.10.0",
     "file-type": "^21.1.1",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.25",
     "html2canvas": "^1.4.1",
     "isomorphic-dompurify": "^2.34.0",
