--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postgres": "^3.4.7",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^3.4.0",
     "ws": "^8.18.0"
