feat: Add WebSocket relay fallback for US users
- Rewrite websocketService.ts with automatic relay fallback
- Try direct Binance connection first, fall back to relay after 5s
- Add socket.io-client for relay server connection
- Add NEXT_PUBLIC_RELAY_URL environment variable
- US users can now view live watchlist data

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,9 @@ DATABASE_URL=postgresql://user:password@ep-xxx.region.aws.neon.tech/database?ssl
 # Get from: https://expo.dev/accounts/[account]/settings/access-tokens
 EXPO_ACCESS_TOKEN=
 
+# Binance WebSocket Relay Server URL (for US users)
+# This should point to your Railway backend
+NEXT_PUBLIC_RELAY_URL=https://alertachart-backend-production.up.railway.app
+
 # Development
 NODE_ENV=development
