--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0",
     "ws": "^8.18.0"
   },
