--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(MARKETING_VERSION)</string>
+	<string>6.4.3</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
